Provided with Configuration of DB Provider and Connection String which will be used by ApplicationDbContext in Program.cs

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -5,4 +5,4 @@
 
 <p>Use this page to detail your site's privacy policy.</p>
 
-<p>This is an Updated View</p>
+<!-- The Privacy.cshtml file is a simple HTML file that displays a title and a paragraph of text. -->
