--- a/Views/Students/Add.cshtml
+++ b/Views/Students/Add.cshtml
@@ -4,25 +4,27 @@
 
 <h1> Add Student </h1>
 
-<div class = "mt-3">
-    <label class = "form-label">Name</label>
-    <input type = "text" class = "formal-control" asp-for="Name">
-</div>
+<form method = "post">
+    <div class = "mt-3">
+        <label class = "form-label">Name</label>
+        <input type = "text" class = "formal-control" asp-for="Name">
+    </div>
 
-<div class = "mt-3">
-    <label class = "form-label">Email</label>
-    <input type = "email" class = "formal-control" asp-for = "Email">
-</div>
-<div class = "mt-3">
-    <label class = "form-label">Phone</label>
-    <input type = "text" class = "formal-control" asp-for = "PhoneNumber">
-</div>
+    <div class = "mt-3">
+        <label class = "form-label">Email</label>
+        <input type = "email" class = "formal-control" asp-for = "Email">
+    </div>
+    <div class = "mt-3">
+        <label class = "form-label">Phone</label>
+        <input type = "text" class = "formal-control" asp-for = "PhoneNumber">
+    </div>
     
-<div class = "mt-3">
-    <input = "checkbox" class = "form-check-input" id ="Subscribed" asp-for = "SubscribedToNewsletter">
-    <label class = "form-check-label" for = "Subscribed">Subscribed</label>
-</div>
+    <div class = "mt-3">
+        <input = "checkbox" class = "form-check-input" id ="Subscribed" asp-for = "SubscribedToNewsletter">
+        <label class = "form-check-label" for = "Subscribed">Subscribed</label>
+    </div>
 
-<div class = "mt-3">
-    <button type = "Submit" class = "btn btn-primary">Save</button>
-</div>
+    <div class = "mt-3">
+        <button type = "Submit" class = "btn btn-primary">Save</button>
+    </div>
+</form>
