--- a/Views/Students/Edit.cshtml
+++ b/Views/Students/Edit.cshtml
@@ -2,7 +2,13 @@
 
 @model WebApplication1.Models.Student
 
-<h1> Edit Student </h1>
+@if (Model == null)
+{
+    <p> Student not found </p>
+}
+
+@else
+{<h1> Edit Student </h1>
 
 <form method = "post">
      <div class = "mt-3">
@@ -33,3 +39,4 @@
         <button type = "Submit" class = "btn btn-primary">Save</button>
     </div>
 </form>
+}
