--- a/Views/Students/List.cshtml
+++ b/Views/Students/List.cshtml
@@ -22,7 +22,7 @@
                 <td> @student.Email </td>
                 <td> @student.PhoneNumber </td>
                 <td> 
-                    <a> Edit </a>
+                    <a class = "btn btn-primary" asp-controller = "Students" asp-action = "Edit" asp-route-id = "@student.Id"> Edit </a>
                 </td>
             </tr>
         }
