--- a/Views/Students/Edit.cshtml
+++ b/Views/Students/Edit.cshtml
@@ -37,6 +37,8 @@
 
     <div class = "mt-3">
         <button type = "Submit" class = "btn btn-primary">Save</button>
+
+        <button type = "Submit" class = "btn btn-danger ms-3" asp-action="Delete", asp-controller="Students">Delete</button>
     </div>
 </form>
 }
